--- a/ComfyGray.css
+++ b/ComfyGray.css
@@ -2783,3 +2783,70 @@ html body #app-mount .wrapper-28eC3z foreignObject {
 .guild-profile .guild-info .section{
   margin-right: 40%;
 }
+
+
+/* spotify controls restyle im working on (beta) */
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .inner-WRV6k5{
+  height: 70px;
+  position: relative;
+  width: calc(100% + 14px);
+  margin-left: -7px;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .flex-2S1XBF{
+  position: absolute;
+  margin-top: 40px;
+  width: 100%;
+  justify-content: center;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .inner-WRV6k5>.details-ntX2k5{
+  text-align: center;
+  margin-bottom: 30px;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .flex-2S1XBF>*:hover{
+  background-color: transparent;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ{
+  position: absolute;
+  width: 100%;
+  height: 165px;
+  margin: 0;
+  margin-top: 25px;
+  border-radius: 0;
+  pointer-events: none;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0){
+  height: 165px;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .cover-SwJ-ck{
+  object-fit: fill;
+  filter: blur(2px) brightness(.3);
+  pointer-events: none;
+  z-index: -99;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ>.maximizer-RVu85p{
+  width: 100%;
+  z-index: 9999;
+  transform: none;
+  border-radius: 0;
+  pointer-events: all;
+  height: 15px;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0):hover .coverWrapper-YAplwJ>.maximizer-RVu85p,
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0):hover .coverWrapper-YAplwJ::before{
+  visibility: visible;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ>.maximizer-RVu85p>*{
+  display: none;
+}
+.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ::before{
+  content: '^';
+  font-size: 46px;
+  position: absolute;
+  color: white;
+  z-index: 1;
+  width: 100%;
+  text-align: center;
+  top: 1px;
+  visibility: hidden;
+}
+
