--- a/addons/roles.css
+++ b/addons/roles.css
@@ -49,3 +49,11 @@
 .message-2CShn3 .role-2TIOKu{
   bottom: 6px;
 }
+.role-2TIOKu .roleRemoveButton-17oXnT {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.roleRemoveIcon-387wKV:not(#a#b){
+  display: none;
+}
