--- a/ComfyGray.css
+++ b/ComfyGray.css
@@ -3327,19 +3327,19 @@ html body #app-mount .wrapper-28eC3z foreignObject {
 }
 
 /* fixing the new disgusting user tag */
-.discordMemberCreatedAt-3htTfn>.discordMemberCreatedAtText-18ZCAV>div{
-  display: none;
+.discordMemberCreatedAt-3htTfn {
+	height: 24px;
+	padding: 8px;
+}
+.discordMemberCreatedAtIconContainer-2NS-8S {
+	padding: 0px;
+	background-color: var(--background-tertiary);
+}
+.discordMemberCreatedAtText-18ZCAV>div{
+	display: none;
 }
 .discordMemberCreatedAt-3htTfn>.discordMemberCreatedAtText-18ZCAV>h3{
-  font-size: 14px;
-  font-family: inherit;
-  font-weight: 10;
-}
-.discordMemberCreatedAt-3htTfn>svg{
-  transform: scale(.7);
-  padding: 0;
-}
-.discordMemberCreatedAt-3htTfn{
-  width: auto;
-  padding-right: 15px;
+	font-size: 16px;
+	font-family: inherit;
+	font-weight: 600;
 }
