--- a/ComfyGray.css
+++ b/ComfyGray.css
@@ -3329,7 +3329,7 @@ html body #app-mount .wrapper-28eC3z foreignObject {
 
 /* new profile popout banner style */
 
-.bannerSVGWrapper-qc0szY {
+.root-g14mjS .bannerSVGWrapper-qc0szY {
   background-color: transparent;
   margin: 10px;
   width: calc(100% - 20px);
@@ -3337,10 +3337,10 @@ html body #app-mount .wrapper-28eC3z foreignObject {
   border-radius: 15px;
 	box-shadow: 0 0 0 2px hsla(0, 0%, 15%, 0.69), 0 3px 16px hsla(0, 0%, 25%, 0.47);
 }
-.header-S26rhB>div:first-child>.wrapper-1VLyxH{
+.root-g14mjS .header-S26rhB>div:first-child>.wrapper-1VLyxH{
   border: 7px solid #18191c;
   box-shadow: 0 0 0 2px hsla(0, 0%, 15%, 0.69), 0 3px 16px hsla(0, 0%, 25%, 0.47);
 }
-.bannerSVGWrapper-qc0szY mask{
+.root-g14mjS .bannerSVGWrapper-qc0szY mask{
   display: none;
 }
