--- a/addons/roles.css
+++ b/addons/roles.css
@@ -1,4 +1,4 @@
-.rolesList-3uZoaa .roleCircle-3K9O3d {
+/* .rolesList-3uZoaa .roleCircle-3K9O3d {
   flex-shrink: 0;
 }
 .roleCircle-3K9O3d {
@@ -56,4 +56,34 @@
 }
 .roleRemoveIcon-387wKV:not(#a#b){
   display: none;
+}
+*/ 
+
+
+.role-2TIOKu {
+  transform: translate(0);
+  overflow: hidden;
+  border: 0;
+
+  --transparency: .4;
+  border-radius: 7px;
+}
+.role-2TIOKu .roleRemoveIcon-387wKV {
+  margin: 0;
+  left: unset;
+  transform: translate(50%,-50%);
+}
+.role-2TIOKu .roleRemoveButton-17oXnT {
+  position: static;
+}
+.role-2TIOKu .roleCircle-3K9O3d:before {
+  content: '';
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: inherit;
+  opacity: var(--transparency);
 }
