--- a/ComfyGray.css
+++ b/ComfyGray.css
@@ -3363,3 +3363,6 @@ html body #app-mount .wrapper-28eC3z foreignObject {
   display: flex;
   justify-content: center;
 }
+.userInfoSection-3her-v>div>div{
+  text-align: center;
+}
