--- a/ComfyGray.css
+++ b/ComfyGray.css
@@ -3366,3 +3366,6 @@ html body #app-mount .wrapper-28eC3z foreignObject {
 .userInfoSection-3her-v>div>div{
   text-align: center;
 }
+.threadSidebarOpen-1LSXvU~.container-3XgAHv .typing-2J1mQU{
+  width: auto;
+}
