--- a/ComfyGray.css
+++ b/ComfyGray.css
@@ -3136,69 +3136,106 @@ html body #app-mount .wrapper-28eC3z foreignObject {
 }
 
 
-/* spotify controls restyle im working on (beta) */
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .inner-WRV6k5 {
-	height: 70px;
-	position: relative;
-	width: calc(100% + 14px);
-	margin-left: -7px;
+/* spotify controls restyle */
+.container-6sXIoE.withTimeline-824fT_ {
+  height: var(--playerHeight);
+  border: none;
+  padding: var(--paddingSides) var(--paddingSides) 10px var(--paddingSides);
+  margin: 0;
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  overflow: hidden;
+  z-index: 999;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .flex-2S1XBF {
-	position: absolute;
-	margin-top: 40px;
-	width: 100%;
-	justify-content: center;
+.container-6sXIoE.withTimeline-824fT_.maximized-vv2Wr0 {
+  --albumCoverRadius: 10px;
+  --paddingSides: 15px;
+  --playerHeight: 330px;
+  padding-top: 10px;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .inner-WRV6k5>.details-ntX2k5 {
-	text-align: center;
-	margin-bottom: 30px;
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0) {
+  --paddingSides: 18px;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .flex-2S1XBF>*:hover {
-	background-color: transparent;
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0)
+  .coverWrapper-YAplwJ {
+  width: calc(100% - ((var(--paddingSides) - 8px) * 2));
+  height: 75px;
+  margin: 0;
+  position: absolute;
+  inset: 10px 0 0 10px;
+  overflow: hidden;
+  z-index: -1;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ {
-	position: absolute;
-	width: 100%;
-	height: 165px;
-	margin: 0;
-	margin-top: 25px;
-	border-radius: 0;
-	pointer-events: none;
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0) .cover-SwJ-ck {
+  --extraExpansion: 20px;
+  width: calc(100% + var(--extraExpansion));
+  height: calc(100% + var(--extraExpansion));
+  position: relative;
+  inset: calc((var(--extraExpansion) / 2) * -1) 0 0
+    calc((var(--extraExpansion) / 2) * -1);
+  filter: blur(4px) !important;
+  opacity: 0.5;
+  pointer-events: none;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) {
-	height: 165px;
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0) .maximizer-RVu85p {
+  width: 150%;
+  height: 10px;
+  left: -38px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  padding: 0;
+  transform: none;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0) .cover-SwJ-ck {
-	object-fit: fill;
-	filter: blur(2px) brightness(.3);
-	pointer-events: none;
-	z-index: -99;
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0)
+  .maximizer-RVu85p
+  > * {
+  transform: rotate(90deg);
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ>.maximizer-RVu85p {
-	width: 100%;
-	z-index: 9999;
-	transform: none;
-	border-radius: 0;
-	pointer-events: all;
-	height: 15px;
+.container-6sXIoE.withTimeline-824fT_ .timeline-UWmgAx .bar-g2ZMIm:before,
+.container-6sXIoE.withTimeline-824fT_ .timeline-UWmgAx .bar-g2ZMIm:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  position: absolute;
+  inset: 0 auto auto 0;
+  transition: opacity 100ms ease-out;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0):hover .coverWrapper-YAplwJ>.maximizer-RVu85p,
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0):hover .coverWrapper-YAplwJ::before {
-	visibility: visible;
+.container-6sXIoE.withTimeline-824fT_ .timeline-UWmgAx .bar-g2ZMIm:before {
+  background-color: rgba(255, 255, 255, 0.6);
+  opacity: 0.4;
+  z-index: -1;
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ>.maximizer-RVu85p>* {
-	display: none;
+.container-6sXIoE.withTimeline-824fT_ .timeline-UWmgAx .barFill-Dhkah7 {
+  background: rgb(255, 255, 255);
 }
-.panels-3wFtMD>.withTimeline-824fT_:not(.maximized-vv2Wr0)>div>.coverWrapper-YAplwJ::before {
-	content: '^';
-	font-size: 46px;
-	position: absolute;
-	color: white;
-	z-index: 1;
-	width: 100%;
-	text-align: center;
-	top: 1px;
-	visibility: hidden;
+.container-6sXIoE.withTimeline-824fT_ button {
+  margin: 0;
+  transition: transform 50ms ease-out;
+}
+.container-6sXIoE.withTimeline-824fT_ button:active {
+  transform: translateY(2px);
+}
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0) {
+  --albumCoverRadius: 8px;
+  --paddingSides: 18px;
+  --playerHeight: 100px;
+}
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0) .inner-WRV6k5 {
+  height: 35px;
+  overflow: hidden;
+}
+.container-6sXIoE.withTimeline-824fT_:not(.maximized-vv2Wr0)
+  .coverWrapper-YAplwJ {
+  width: calc(100% - (var(--paddingSides) - 8px) * 2);
+  height: calc(var(--playerHeight) - 10px);
+  margin: 0;
+  position: absolute;
+  inset: 10px 0 0 10px;
+  overflow: hidden;
+  z-index: -1;
 }
 
 /* fixing forum channels */
@@ -3367,4 +3404,13 @@ html body #app-mount .wrapper-28eC3z foreignObject {
 }
 .threadSidebarOpen-1LSXvU~.container-3XgAHv .typing-2J1mQU{
   width: auto;
+}
+/* typing indicator */
+.typingIndicator{
+    background: #444;
+}
+
+/* fixing bugs */
+.flex-2S1XBF>button:hover{
+    background-color: #343434;
 }
