--- a/ComfyGray.css
+++ b/ComfyGray.css
@@ -1,3 +1,15 @@
+/**
+* @name ComfyGray
+* @version 1.0
+* @author carrot#8812
+* @description A theme with a nice shade of gray everywhere! Its super comfy.
+* @source not-set
+* @invite not-set
+*/
+
+
+
+
 .theme-dark,
 .theme-light {
 	--header-primary: #fff;
